git-svn-id: http://svn.vdombox.ru/flextools/trunk@8377 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -55,8 +55,8 @@
 			{
 				// TODO Auto-generated method stub
 				var sourceDropDownList : ArrayCollection = new ArrayCollection();
-				sourceDropDownList.addItem( 'Full View' );
-				sourceDropDownList.addItem( 'Active + Embedded' );
+				sourceDropDownList.addItem( 'Full view' );
+				sourceDropDownList.addItem( 'Active + embedded' );
 				sourceDropDownList.addItem( 'Active' );
 				_showElementsView.dataProvider = sourceDropDownList;
 			}
