--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
@@ -299,7 +299,7 @@
 				 itemRenderer="net.vdombox.ide.modules.dataBase.view.components.ItemRenderers.ObjectTreePanelItemRenderer"/>
 		
 		<s:HGroup width="100%" height="40" verticalAlign="middle" horizontalAlign="center">
-			<button:VDOMButton id="newBase" label="New Base" click="newBase_clickHandler(event)" />
+			<button:VDOMButton id="newBase" label="New base" click="newBase_clickHandler(event)" />
 		</s:HGroup>
 	</s:VGroup>
 	
