--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
@@ -151,6 +151,8 @@
 					scriptEditor_saveHandler();
 				else if ( e.ctrlKey && e.keyCode == Keyboard.F )
 					dispatchEvent( new ScriptEditorEvent ( ScriptEditorEvent.OPEN_FIND ) );
+				else if ( e.ctrlKey && e.keyCode == Keyboard.H )
+					dispatchEvent( new ScriptEditorEvent ( ScriptEditorEvent.OPEN_FIND_GLOBAL ) );
 			}
 			
 			protected function navigatorcontent2_removeHandler(event:FlexEvent):void
