--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptArea.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptArea.mxml
@@ -35,15 +35,16 @@
 	<s:states>
 		<s:State name="normal"/>
 		<s:State name="find"/>
+		<s:State name="findG"/>
 	</s:states>
 	
-	<s:VGroup width="100%" height="100%" gap="0">	
+	<mx:VDividedBox width="100%" height="100%">	
 		
 		<components:WorkArea id="workArea"
 							 height="100%" width="100%"/>
 		
 		<components:FindBox id="findBox" width="100%"
-							includeIn="find" creationComplete="findBox_creationCompleteHandler(event)"/>
-	</s:VGroup>
+							includeIn="find, findG" creationComplete="findBox_creationCompleteHandler(event)"/>
+	</mx:VDividedBox>
 	
 </s:Group>
