git-svn-id: http://svn.vdombox.ru/flextools/trunk@8396 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/FindBox.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/FindBox.mxml
@@ -5,7 +5,9 @@
 		 creationComplete="group1_creationCompleteHandler(event)">
 	<fx:Script>
 		<![CDATA[
+			import mx.collections.Sort;
 			import mx.collections.SortField;
+			import mx.collections.XMLListCollection;
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.editors.ScriptAreaComponent;
@@ -274,10 +276,12 @@
 						structure[i].appendChild( containerActionsCode[ structure[i].@id ] );
 				}
 				
-				var sortField : SortField = new SortField( "@name" );
-				sortField.caseInsensitive = true;
+				var xmlListCollection : XMLListCollection = new XMLListCollection( structure );
+				xmlListCollection.sort = new Sort();
+				xmlListCollection.sort.fields = [ new SortField( "@name" ) ];
+				xmlListCollection.refresh();
 								
-				scriptsXMLList = XMLUtils.sortElementsInXMLList( structure, sortField );
+				scriptsXMLList = xmlListCollection.copy();
 			}
 			
 			public function findStringInLibraries( libraries : Array, title : String ) : void
