git-svn-id: http://svn.vdombox.ru/flextools/trunk@8397 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -8,7 +8,8 @@
 					  height="25"
 					  minWidth="200"
 					  contentBackgroundAlpha="0" 
-					  contextMenu="mxtreeitemrenderer1_contextMenuHandler(event)">
+					  contextMenu="mxtreeitemrenderer1_contextMenuHandler(event)"
+					  keyDown="mxtreeitemrenderer1_keyDownHandler(event)">
 
 	<s:states>
 		<s:State name="normal" />
@@ -63,6 +64,8 @@
 				
 				if ( _data )
 					createContextMenu();
+				else
+					trace("null");
 			}
 			
 			
@@ -285,6 +288,24 @@
 					pasteEvent.pageID = pasteEvent.objectID;
 				
 				dispatchEvent( pasteEvent );
+			}
+			
+			protected function mxtreeitemrenderer1_keyDownHandler(event:KeyboardEvent):void
+			{
+				if ( event.ctrlKey && event.keyCode == Keyboard.C )
+				{
+					copyContextMenuHandler( null );
+					event.stopImmediatePropagation();
+				}
+				else if ( event.ctrlKey && event.keyCode == Keyboard.V )
+				{
+					pasteContextMenuHandler( null );
+					event.stopImmediatePropagation();
+				}
+				else if ( event.keyCode == Keyboard.DELETE )
+				{
+					deleteContextMenuHandler( null );
+				}
 			}
 			
 		]]>
